Fix border making the rows too tall

--- a/styles/git-log.less
+++ b/styles/git-log.less
@@ -61,9 +61,9 @@
 
             span {
                 display: inline-block;
-                border: 1px solid @base-border-color;
+                box-shadow: inset 0 0 0 1px @base-border-color;
                 margin-right: 4px;
-                padding: 0 2px;
+                padding: 0 3px;
                 border-radius: 4px;
                 color: @text-color-selected;
             }
